# compile-time-ray-tracing-in-rust

./: .gitignore  Cargo.toml  README.md  build.rs
src/: camera.rs  hit_record.rs  hittable.rs  hittable_list.rs  lib.rs  main.rs  rand.rs  ray.rs  sphere.rs  util.rs  vec3.rs
